k8s/benchmark/score-computer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: score-computer
  namespace: benchmark
spec:
  selector:
    app: score-computer
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
